manual/keptn-enable.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ortelius
  annotations:
    keptn.sh/lifecycle-toolkit: "enabled" # this tells Keptn to watch the namespace
