manual/middleware-ortelius-traefik.yaml
# Redirect to https
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ortelius-redirectscheme
  namespace: ortelius
spec:
  redirectScheme:
    scheme: https
    permanent: true
