manual/ingressroute-ortelius-traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ortelius
  namespace: ortelius
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`ortelius.pangarabbit.com`)
      kind: Rule
      services:
        - name: ms-nginx
          namespace: ortelius
          kind: Service
          port: 80
